<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/resetPasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/reset_password_title"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/resetPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/resetPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email_reset"
        app:layout_constraintBottom_toTopOf="@+id/resetPasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordTitle" />

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/gradient"
        android:text="@string/reset_password_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>